# differ

./: .gitignore  .tool-versions  LICENSE  Makefile  README.md  package-lock.json  package.json
docs/plans/: 2026-02-26-differ-design.md  2026-02-26-differ-implementation.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  git.rs  lib.rs  mcp.rs  state.rs  types.rs
src/lib/: CommentBox.svelte  DiffViewer.svelte  FileHeader.svelte  QueueStatus.svelte  RefSelector.svelte  theme.svelte.ts  types.ts  viewed.svelte.ts
src/routes/: +page.svelte
