[package]
name = "differ"
version = "0.1.0"
description = "Local PR review app with MCP integration"
authors = ["you"]
edition = "2021"

[lib]
name = "differ_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = { version = "0.20", features = ["vendored-libgit2"] }
rmcp = { version = "0.16", features = ["server", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["full"] }
schemars = "0.8"
